--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
               <input type="text" class="form-control" placeholder="Email" id="email-input">
               <button class="btn btn-outline-secondary" type="button" id="button-addon2" onclick="verifyEmail()">Submit</button>
             </div>
+            <p class="text-danger" id="invalidEmail" style="display: none;">Email invalid!</div>
           </div>
         </div>
         <div id="spacer"></div>
